@@ -1,8 +1,9 @@
-v142s
+v142
     -Add command line option recursion depth -r.
     -Add virtual default parser group.
     -Add command line option for user defined parsers -p.
     -Update text parser.
+    -Less agressive filter status in Codec.
 v141
     -Fix bad compression on mrb.
     -Re-enable WRT for streams 8 and 9.
